bugfix: stretch doesnt work when used in template block

--- a/src/scss/layout/_stretch.scss
+++ b/src/scss/layout/_stretch.scss
@@ -11,12 +11,13 @@
 	width: 1%;
 }
 
-.stretch-column > p > img,
-.stretch-row > p > img,
-.stretch-column > p > video,
-.stretch-row > p > video,
-.stretch-column > p > iframe,
-.stretch-row > p > iframe {
+
+.stretch-column > * > p > img,
+.stretch-row > * > p > img,
+.stretch-column > * > p > video,
+.stretch-row > * > p > video,
+.stretch-column > * > p > iframe,
+.stretch-row > * > p > iframe {
 	height: 100%;
 	width: 100%;
 	max-width: 100% !important;
